--- a/static/css/main.css
+++ b/static/css/main.css
@@ -109,4 +109,37 @@ section .main-body{
     }
 }
 
+.project-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.project-grid h3 {
+    font-size: 1.5rem;
+    color: var(--h-title-color);
+    font-weight: 600;
+}
+
+.project-grid img {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+}
+
+.project-grid img:hover {
+    transform: scale(1.05);
+}
+
+.project-grid p {
+    font-size: 1.2rem;
+    font-weight: 300;
+    color: #666;
+    margin-top: 5px;
+}
 
