--- a/static/css/main.css
+++ b/static/css/main.css
@@ -109,34 +109,42 @@ section .main-body{
     }
 }
 
-.project-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+.project-list {
+    display: flex;
+    flex-direction: column;
     gap: 20px;
     padding: 20px 0;
-    text-align: center;
 }
 
-.project-grid h3 {
-    font-size: 1.5rem;
-    color: var(--h-title-color);
-    font-weight: 600;
-}
-
-.project-grid img {
-    width: 100%;
-    max-width: 300px;
-    height: auto;
+.project-card {
+    background: #ffffff;
     border-radius: 10px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 15px;
     transition: transform 0.3s ease-in-out;
 }
 
-.project-grid img:hover {
-    transform: scale(1.05);
+.project-card:hover {
+    transform: scale(1.02);
 }
 
-.project-grid p {
+.project-content h3 {
+    font-size: 1.5rem;
+    color: var(--h-title-color);
+    margin: 0;
+}
+
+.project-content h3 a {
+    text-decoration: none;
+    color: inherit;
+    transition: color 0.3s ease;
+}
+
+.project-content h3 a:hover {
+    color: var(--bs-blue);
+}
+
+.project-content p {
     font-size: 1.2rem;
     font-weight: 300;
     color: #666;
